JBTM-3844 Explain how to obtain a version of WildFly that is built with the expected version of Narayana in it